--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@svgr/webpack": "4.3.3",
+    "@tensorflow/tfjs": "^3.4.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -46,6 +47,7 @@
     "mini-css-extract-plugin": "0.9.0",
     "mui-rff": "^2.5.6",
     "optimize-css-assets-webpack-plugin": "5.0.3",
+    "plotly.js": "^1.58.4",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "3.0.0",
@@ -57,6 +59,8 @@
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.14.0",
     "react-final-form": "^6.5.1",
+    "react-notifications": "^1.7.2",
+    "react-plotly.js": "^2.5.1",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.2",
